--- a/public/login.html
+++ b/public/login.html
@@ -14,6 +14,7 @@
       <input type="text" id="login-username" placeholder="Username">
       <input type="password" id="login-password" placeholder="Password">
       <input type="submit" id="login" value="Login">
+      <p id="errorField"></p>
     </form>
   </body>
 </html>
