--- a/public/home.html
+++ b/public/home.html
@@ -6,8 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="style.css">
+    <script src="/home.js" defer></script>
   </head>
   <body>
+    <h1></h1>
+    <div id="dashboard-projectGrid">
 
+    </div>
   </body>
 </html>
