--- a/public/editor/editor.html
+++ b/public/editor/editor.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Editor</title>
     <link rel="stylesheet" href="/style.css">
+    <script src="/editor/editor.js" defer></script>
   </head>
   <body>
-
+    <div  id="editorWindow" contenteditable="true">
+    </div>  
   </body>
 </html>
