Fixed cursor problems

--- a/public/editor/editor.html
+++ b/public/editor/editor.html
@@ -9,7 +9,7 @@
     <script src="/editor/editor.js" defer></script>
   </head>
   <body>
-    <div  id="editorWindow" contenteditable="true">
+    <div  id="editorWindow" contenteditable="true" spellcheck="false">
     </div>  
   </body>
 </html>
