--- a/public/editor/editor.html
+++ b/public/editor/editor.html
@@ -9,7 +9,12 @@
     <script src="/editor/editor.js" defer></script>
   </head>
   <body>
-    <div  id="editorWindow" contenteditable="true" spellcheck="false">
-    </div>  
+    <main>
+      <nav>
+        test
+      </nav>
+      <div  id="editorWindow" contenteditable="true" spellcheck="false">
+      </div>  
+    </main>
   </body>
 </html>
