--- a/public/editor/editor.html
+++ b/public/editor/editor.html
@@ -7,11 +7,11 @@
     <title>Editor</title>
     <link rel="stylesheet" href="/style.css">
     <script src="/editor/editor.js" defer></script>
+    <script src="/editor/explorer.js" defer></script>
   </head>
   <body>
     <main>
       <nav>
-        test
       </nav>
       <div  id="editorWindow" contenteditable="true" spellcheck="false">
       </div>  
