Added line numbers

--- a/public/editor/editor.html
+++ b/public/editor/editor.html
@@ -13,7 +13,12 @@
     <main>
       <nav>
       </nav>
-      <div  id="editorWindow" contenteditable="true" spellcheck="false">
+      <div id="editorWindow">
+        <div id="lineNumbers">
+        </div>
+        <div id="textWindow" contenteditable="true" spellcheck="false">
+
+        </div>
       </div>  
     </main>
   </body>
